GR - fix spacing on how it works section for questions

--- a/assets/scss/pages/_objective.scss
+++ b/assets/scss/pages/_objective.scss
@@ -19,6 +19,11 @@
   @extend %objective-section;
 }
 
+.objective-questions-guidance {
+  margin-top: 2em;
+  margin-bottom: 3em;
+}
+
 .objective-comments {
   @extend %objective-section;
 }
